--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -28,9 +28,9 @@
                 android:orientation="vertical"
                 android:padding="@dimen/min_padding">
 
-                <com.android.volley.toolbox.NetworkImageView
+                <ImageView
                     android:id="@+id/fus_thumb"
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/thumb_height"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
                     android:background="@drawable/img" />
@@ -84,30 +84,22 @@
                     android:text="Jenis Pengguna"
                     android:textColor="@color/colorBlack" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/min_padding">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorNearWhite"
+                    android:orientation="vertical"
+                    android:padding="@dimen/xmin_padding">
 
                     <Spinner
                         android:id="@+id/fus_role"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:entries="@array/role_entries"
-                        android:fadingEdge="horizontal"
                         android:padding="@dimen/xmin_padding"
-                        app:layout_gravity="bottom" />
+                        android:spinnerMode="dialog" />
 
-                    <View
-                        android:id="@+id/line"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_alignBottom="@id/fus_role"
-                        android:background="@android:color/darker_gray"
-                        android:paddingLeft="@dimen/min_padding"
-                        android:paddingRight="@dimen/min_padding" />
-
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
