--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -29,12 +29,19 @@
                 android:orientation="vertical"
                 android:padding="@dimen/min_padding">
 
-                <com.android.volley.toolbox.NetworkImageView
+                <!--<com.android.volley.toolbox.NetworkImageView-->
+                    <!--android:id="@+id/pr_thumb"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="@dimen/thumb_height"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:background="@drawable/img" />-->
+
+                <ImageView
                     android:id="@+id/pr_thumb"
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/thumb_height"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    android:background="@drawable/img" />
+                    android:background="@drawable/user_ava_man" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
