--- a/app/src/main/res/layout/users_item_view.xml
+++ b/app/src/main/res/layout/users_item_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card_view_user"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/min_padding"
+        android:layout_marginBottom="@dimen/xmin_padding"
         android:clickable="true"
         android:foreground="?selectableItemBackground"
         app:cardBackgroundColor="@color/colorWhite">
@@ -57,22 +57,25 @@
                         android:layout_centerVertical="false"
                         android:text="Nama User"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textSize="@dimen/large_text"
+                        android:textSize="@dimen/medium_text"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/user_role"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/darker_gray"
+                        android:paddingEnd="@dimen/xmin_padding"
+                        android:paddingStart="@dimen/xmin_padding"
+                        android:layout_marginTop="@dimen/small_space"
+                        android:text="Role User"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/small_text"
+                        android:layout_below="@+id/user_name"
+                         />
 
                 </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/user_role"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:background="@android:color/darker_gray"
-                    android:paddingEnd="@dimen/xmin_padding"
-                    android:paddingStart="@dimen/xmin_padding"
-                    android:text="Role User"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/small_text" />
 
             </RelativeLayout>
 
