--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="small_text">16sp</dimen>
     <dimen name="huge_text">32sp</dimen>
     <dimen name="tiny_text">10sp</dimen>
+    <dimen name="almost_tiny_text">11sp</dimen>
 
     <dimen name="thumb_width">100dp</dimen>
     <dimen name="thumb_height">100dp</dimen>
