--- a/app/src/main/res/layout/content_form_motorcycle_aset.xml
+++ b/app/src/main/res/layout/content_form_motorcycle_aset.xml
@@ -416,6 +416,232 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding">
+
+                <LinearLayout
+                    android:id="@+id/as_pricing"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorWhite"
+                    android:orientation="vertical"
+                    android:padding="@dimen/xmin_padding">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimary"
+                        android:padding="@dimen/min_padding">
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:text="Harga Sewa"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="@dimen/medium_text"
+                            android:textStyle="bold" />
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding">
+
+                        <TextView
+                            android:id="@+id/textView21"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Harga Sewa "
+                            android:textColor="@color/colorBlack"
+                            android:textSize="12sp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/as_price_basic"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Harga"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="" />
+
+                            <TextView
+                                android:id="@+id/idra"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="IDR"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/colorGrey"
+                                android:layout_marginEnd="@dimen/min_padding"
+                                android:textSize="@dimen/medium_text" />
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/con_advance_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView12w"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Range Name"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_range_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Nama"
+                                android:inputType="textPersonName"
+                                android:padding="@dimen/min_padding"
+                                android:text="High Season" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView13"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Waktu Mulai"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_start_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Start Date"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="2017-10-09" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView14"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Waktu Berakhir"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_end_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="End Date"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="2017-12-09" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView12"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Harga "
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <EditText
+                                    android:id="@+id/as_price_advance"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/colorNearWhite"
+                                    android:ems="10"
+                                    android:hint="Harga"
+                                    android:inputType="number"
+                                    android:padding="@dimen/min_padding"
+                                    android:text="" />
+
+                                <TextView
+                                    android:id="@+id/daye"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="IDR"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:textColor="@color/colorGrey"
+                                    android:layout_marginEnd="@dimen/min_padding"
+                                    android:textSize="@dimen/medium_text" />
+
+                            </RelativeLayout>
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/btn_price_advance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+ Tambah Harga Advance"
+                        android:layout_gravity="end"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/small_text"
+                        android:clickable="true"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
                 <LinearLayout
