Feature Asset List

--- a/app/src/main/res/layout/content_feature.xml
+++ b/app/src/main/res/layout/content_feature.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_driver"
+    android:id="@+id/content_feature"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.rentist.mitrarentist.DriverActivity"
-    tools:showIn="@layout/activity_driver">
+    tools:context="id.rentist.mitrarentist.FeatureActivity"
+    tools:showIn="@layout/activity_feature">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/dr_recyclerView"
+            android:id="@+id/fr_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/min_padding">
