--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -48,8 +48,7 @@
         android:layout_below="@id/navImageProfile"
         android:paddingBottom="@dimen/min_padding"
         android:paddingTop="@dimen/xmin_padding"
-        android:layout_centerHorizontal="true"
-        >
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/navRentName"
@@ -62,6 +61,5 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
-
 
 </RelativeLayout>
