--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/aset_box"
             android:title="Aset" />
         <item
+            android:id="@+id/nav_feature"
+            android:icon="@drawable/aset_box"
+            android:title="Fitur Tambahan" />
+        <item
             android:id="@+id/nav_driver"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="Pengemudi" />
