--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/img"
         android:scaleType="centerCrop"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/min_padding" />
+        android:layout_marginBottom="@dimen/xmin_padding" />
 
     <ImageButton
         android:id="@+id/btn_prof_pic"
@@ -54,11 +54,26 @@
             android:id="@+id/navRentName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:text="RENTAL SUKSES"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="@dimen/medium_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/small_space"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/navRole"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SuperAdmin"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="@dimen/almost_tiny_text"
+            android:paddingEnd="@dimen/small_space"
+            android:paddingStart="@dimen/small_space"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/darker_gray"
+            android:layout_below="@id/navRentName"
+            />
 
     </RelativeLayout>
 
