--- a/app/src/main/res/layout/feature_item_view.xml
+++ b/app/src/main/res/layout/feature_item_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view_driver"
+        android:id="@+id/card_view_feature"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/min_padding"
@@ -19,19 +19,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:padding="@dimen/med_padding">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:padding="@dimen/med_padding">
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:paddingRight="@dimen/xmin_padding">
 
                 <TextView
                     android:id="@+id/fr_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:text="Additional Item"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/large_text"
@@ -41,14 +44,41 @@
                     android:id="@+id/fr_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:text="0 IDR"
+                    android:textAlignment="textEnd"
                     android:textColor="@color/colorPrice"
                     android:textSize="@dimen/medium_text"
                     android:textStyle="bold" />
+            </LinearLayout>
 
-            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/action_feature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageButton
+                    android:id="@+id/fr_btn_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/xmin_padding"
+                    android:background="@color/colorNearWhite"
+                    android:padding="@dimen/xmin_padding"
+                    app:srcCompat="@drawable/ic_edit_black_24dp" />
+
+                <ImageButton
+                    android:id="@+id/fr_btn_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/xmin_padding"
+                    android:background="@color/colorNearWhite"
+                    android:padding="@dimen/xmin_padding"
+                    app:srcCompat="@drawable/ic_delete_black_24dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
