--- a/app/src/main/res/layout/content_form_car_aset.xml
+++ b/app/src/main/res/layout/content_form_car_aset.xml
@@ -556,113 +556,192 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/xmin_padding"
                         android:orientation="vertical"
                         android:padding="@dimen/xmin_padding">
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/textView21"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Bahan Bakar"
+                            android:text="Harga Sewa "
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
-                        <EditText
-                            android:id="@+id/as_range_name"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:hint="Nama"
-                            android:inputType="textPersonName"
-                            android:padding="@dimen/min_padding"
-                            android:text="High Season" />
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/as_price_basic"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Harga"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="" />
+
+                            <TextView
+                                android:id="@+id/idra"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="IDR"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/colorGrey"
+                                android:layout_marginEnd="@dimen/min_padding"
+                                android:textSize="@dimen/medium_text" />
+
+                        </RelativeLayout>
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/con_advance_price"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/xmin_padding"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="@dimen/xmin_padding">
+                        android:visibility="gone">
 
-                        <TextView
-                            android:id="@+id/textView13"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Waktu Mulai"
-                            android:textColor="@color/colorBlack"
-                            android:textSize="12sp" />
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
 
-                        <EditText
-                            android:id="@+id/as_start_date"
+                            <TextView
+                                android:id="@+id/textView12w"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Range Name"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_range_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Nama"
+                                android:inputType="textPersonName"
+                                android:padding="@dimen/min_padding"
+                                android:text="High Season" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:hint="Start Date"
-                            android:inputType="number"
-                            android:padding="@dimen/min_padding"
-                            android:text="2017-10-09" />
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView13"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Waktu Mulai"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_start_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Start Date"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="2017-10-09" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView14"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Waktu Berakhir"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <EditText
+                                android:id="@+id/as_end_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="End Date"
+                                android:inputType="number"
+                                android:padding="@dimen/min_padding"
+                                android:text="2017-12-09" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <TextView
+                                android:id="@+id/textView12"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Harga "
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <EditText
+                                    android:id="@+id/as_price_advance"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/colorNearWhite"
+                                    android:ems="10"
+                                    android:hint="Harga"
+                                    android:inputType="number"
+                                    android:padding="@dimen/min_padding"
+                                    android:text="" />
+
+                                <TextView
+                                    android:id="@+id/daye"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="IDR"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:textColor="@color/colorGrey"
+                                    android:layout_marginEnd="@dimen/min_padding"
+                                    android:textSize="@dimen/medium_text" />
+
+                            </RelativeLayout>
+                        </LinearLayout>
+
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/xmin_padding"
-                        android:orientation="vertical"
-                        android:padding="@dimen/xmin_padding">
+                    <TextView
+                        android:id="@+id/btn_price_advance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="+ Tambah Harga Advance"
+                        android:layout_gravity="end"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/small_text"
+                        android:clickable="true"/>
 
-                        <TextView
-                            android:id="@+id/textView14"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Waktu Berakhir"
-                            android:textColor="@color/colorBlack"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/as_end_date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:hint="End Date"
-                            android:inputType="number"
-                            android:padding="@dimen/min_padding"
-                            android:text="2017-12-09" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/xmin_padding"
-                        android:orientation="vertical"
-                        android:padding="@dimen/xmin_padding">
-
-                        <TextView
-                            android:id="@+id/textView15"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Harga"
-                            android:textColor="@color/colorBlack"
-                            android:textSize="12sp" />
-
-                        <EditText
-                            android:id="@+id/as_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:gravity="start"
-                            android:hint="Harga"
-                            android:inputType="number"
-                            android:lines="3"
-                            android:padding="@dimen/min_padding"
-                            android:text="300000" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
