--- a/app/src/main/res/layout/content_form_motorcycle_aset.xml
+++ b/app/src/main/res/layout/content_form_motorcycle_aset.xml
@@ -55,6 +55,66 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/xmin_padding"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding">
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Sub Kategori Aset"
+                            android:textColor="@color/colorBlack" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorNearWhite"
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <Spinner
+                                android:id="@+id/as_subcat_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:entries="@array/motorcycle_subcategory_entries"
+                                android:padding="@dimen/xmin_padding"
+                                android:spinnerMode="dialog" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/xmin_padding"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding">
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Nama Aset"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/as_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorNearWhite"
+                            android:elevation="0dp"
+                            android:ems="10"
+                            android:hint="Nama"
+                            android:padding="@dimen/min_padding"
+                            android:text="Motor Rental" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/xmin_padding"
                         android:orientation="vertical"
                         android:padding="@dimen/xmin_padding">
@@ -196,7 +256,7 @@
                             android:id="@+id/textView29"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="No. BPKB Kendaraan"
+                            android:text="No. STNK"
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
@@ -307,7 +367,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/xmin_padding"
                         android:orientation="vertical"
                         android:padding="@dimen/xmin_padding">
 
@@ -333,6 +392,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="10dp"
+                                android:layout_weight="1"
                                 android:buttonTint="@color/colorPrimary"
                                 android:checked="true"
                                 android:contextClickable="false"
@@ -343,19 +403,53 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:buttonTint="@color/colorPrimary"
+                                android:layout_weight="1"
                                 android:text="automatic" />
 
                         </RadioGroup>
                     </LinearLayout>
 
-                    <CheckBox
-                        android:id="@+id/as_ck_driver"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginBottom="@dimen/xmin_padding"
-                        android:layout_weight="1"
-                        android:padding="@dimen/xmin_padding"
-                        android:text="Pengemudi" />
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Minimal Lama Peminjaman"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="12sp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/as_min_day_rent"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@color/colorNearWhite"
+                                android:ems="10"
+                                android:hint="Hari"
+                                android:padding="@dimen/min_padding"
+                                android:text="3" />
+
+                            <TextView
+                                android:id="@+id/day"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Hari"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:textColor="@color/colorBlack54"
+                                android:layout_marginEnd="@dimen/min_padding"
+                                android:textSize="@dimen/medium_text" />
+
+                        </RelativeLayout>
+                    </LinearLayout>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -371,23 +465,35 @@
                             android:layout_alignParentTop="true"
                             android:layout_marginTop="@dimen/xmin_padding"
                             android:layout_weight="1"
-                            android:checked="true"
+                            android:checked="false"
                             android:paddingEnd="@dimen/min_padding"
                             android:text="Asuransi" />
+
 
                         <EditText
                             android:id="@+id/as_assurance_price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignBottom="@id/as_ck_assurance"
-                            android:layout_toRightOf="@+id/as_ck_assurance"
                             android:background="@color/colorNearWhite"
+                            android:layout_toEndOf="@id/as_ck_assurance"
                             android:ems="10"
-                            android:hint="Harga Asuransi"
-                            android:inputType="number"
+                            android:hint="Nominal"
                             android:padding="@dimen/min_padding"
-                            android:text="20000" />
+                            android:text="0" />
+
+                        <TextView
+                            android:id="@+id/idr"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="IDR"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:textColor="@color/colorBlack54"
+                            android:layout_marginEnd="@dimen/min_padding"
+                            android:textSize="@dimen/medium_text" />
+
                     </RelativeLayout>
+
 
                     <EditText
                         android:id="@+id/as_nprice"
