--- a/app/src/main/res/layout/aset_item_view.xml
+++ b/app/src/main/res/layout/aset_item_view.xml
@@ -10,7 +10,8 @@
         android:id="@+id/card_view_aset"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/min_padding"
+        android:layout_marginTop="@dimen/xmin_padding"
+        android:layout_marginBottom="@dimen/xmin_padding"
         android:clickable="true"
         android:foreground="?selectableItemBackground"
         android:padding="@dimen/xmin_padding"
