--- a/app/src/main/res/layout/content_aset_list.xml
+++ b/app/src/main/res/layout/content_aset_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_aset"
@@ -8,21 +8,53 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.AsetListActivity"
     android:background="@color/colorBackgound"
+    android:orientation="vertical"
     tools:showIn="@layout/activity_aset_list">
+
+    <LinearLayout
+        android:id="@+id/no_aset"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <ImageView
+            android:layout_width="@dimen/explorer_item_size"
+            android:layout_height="@dimen/explorer_item_size"
+            android:layout_gravity="center|center_vertical"
+            android:src="@drawable/no_aset"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/min_padding"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack54"
+            android:textStyle="bold"
+            android:text="maaf, anda tidak memiliki aset dikategori ini"
+            />
+
+    </LinearLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+       >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/as_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/min_padding">
+            android:paddingStart="@dimen/min_padding"
+            android:paddingTop="@dimen/xmin_padding"
+            android:paddingEnd="@dimen/min_padding">
 
         </android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
